--- a/Ventas/AnadirRequerimientos.html
+++ b/Ventas/AnadirRequerimientos.html
@@ -114,7 +114,7 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Ventas: Añadir requerimiento</h3>
-            <div class="btn-group" role="group"><a class="btn" role="button" href="Ventas.html">Cancelar</a><a class="btn btn-primary" role="button" id="btnGuardar">Guardar</a></div>
+            <div class="btn-group" role="group"><a class="btn fw-bold" role="button" href="Ventas.html">Cancelar</a><a class="btn btn-primary fw-bold" role="button" id="btnGuardar">Guardar</a></div>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta">
@@ -125,11 +125,12 @@
                         <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-cliente">
                             <div class="accordion-body">
                                 <div class="btn-search-group">
-                                    <div class="input-div search"><input type="search" id="input-search-cliente" class="search-input" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                                    <div class="input-div search   mb-3">
+                                        <input type="search" id="input-search-cliente" class="search-input form-control" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                             <path d="M21 21l-6 -6"></path>
-                                        </svg></div><button class="btn" id="btnNuevoCliente" type="button">+ Cliente</button>
+                                        </svg></div><button class="btn fw-bold" id="btnNuevoCliente" type="button">+ Cliente</button>
                                 </div>
                                 <div class="table-responsive" id="tblCliente">
                                     <table class="table">
@@ -171,17 +172,20 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- 2nd accordion  -->
                 <div class="accordion" role="tablist" id="accordion-contacto">
                     <div class="accordion-item">
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-contacto .item-1" aria-expanded="false" aria-controls="accordion-contacto .item-1"><strong>Contacto cliente:&nbsp;</strong><span id="detalleContacto">Ninguno elegido</span></button></h2>
                         <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-contacto">
                             <div class="accordion-body">
                                 <div class="btn-search-group">
-                                    <div class="input-div search"><input type="search" id="input-search-contacto" class="search-input" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                                    <div class="input-div search mb-3">
+                                        <input type="search" id="input-search-contacto" class="search-input form-control" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                             <path d="M21 21l-6 -6"></path>
-                                        </svg></div><button class="btn" id="btnNuevoContacto" type="button" data-bs-target="#modal-contacto-nuevo" data-bs-toggle="modal">+ Contacto</button>
+                                        </svg></div><button class="btn fw-bold" id="btnNuevoContacto" type="button" data-bs-target="#modal-contacto-nuevo" data-bs-toggle="modal">+ Contacto</button>
                                 </div>
                                 <div class="table-responsive" id="tblContacto">
                                     <table class="table">
@@ -224,10 +228,12 @@
                     </div>
                 </div>
                 <div class="info-detail">
-                    <h6>Adjunto:</h6><input type="file" id="adjunto">
+                    <h6 class="fw-semibold">Adjunto:</h6>
+                    <div><input type="file" id="adjunto" class="form-control"></div>
                 </div>
                 <div class="info-detail">
-                    <h6>Estado:</h6><select id="estado">
+                    <h6 class="fw-semibold">Estado:</h6>
+                    <select id="estado" class="form-control-sm">
                         <option value="1. Registrado" selected="">1. Registrado</option>
                         <option value="2. Con Planilla">2. Con Planilla</option>
                         <option value="3. Con Oferta de Proveedor">3. Con Oferta de Proveedor</option>
@@ -243,23 +249,23 @@
                     </select>
                 </div>
                 <div class="info-detail">
-                    <h6>Fecha de rgistro:</h6>
+                    <h6 class="fw-semibold">Fecha de rgistro:</h6>
                     <p id="fecha-registro">x</p>
                 </div>
                 <div class="info-detail max-height">
-                    <h6>Nombre del requerimiento:</h6><input type="text" id="nombre-req" class="info-input">
+                    <h6 class="fw-semibold">Nombre del requerimiento:</h6><input type="text" id="nombre-req" class="info-input form-control-sm " placeholder="Type Here">
                 </div>
                 <div class="accordion" role="tablist" id="accordion-lugar">
                     <div class="accordion-item">
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-lugar .item-1" aria-expanded="false" aria-controls="accordion-lugar .item-1"><strong>Lugar de entrega de cliente:&nbsp;</strong><span id="lugar-entrega">Ninguno elegido</span></button></h2>
                         <div class="accordion-collapse collapse item-1" role="tabpanel" data-bs-parent="#accordion-lugar">
                             <div class="accordion-body">
-                                <div class="btn-search-group">
+                                <div class="btn-search-group mb-3">
                                     <div class="input-div search"><input type="search" id="input-search-lugar" class="search-input" autocomplete="on"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                                             <path d="M21 21l-6 -6"></path>
-                                        </svg></div><button class="btn" id="btnNuevoLugar" type="button">+ Lugar</button>
+                                        </svg></div><button class="btn fw-semibold" id="btnNuevoLugar" type="button">+ Lugar</button>
                                 </div>
                                 <div class="table-responsive" id="tblDireccion">
                                     <table class="table">
@@ -302,7 +308,7 @@
                     </div>
                 </div>
                 <div class="info-detail">
-                    <h6>Planilla:&nbsp;<span id="countPlanilla">n</span></h6><button class="btn" id="btnNuevoProducto" type="button">Añadir producto</button>
+                    <h6 class="fw-semibold">Planilla:&nbsp;<span id="countPlanilla">n</span></h6><button class="btn fw-bold" id="btnNuevoProducto" type="button">Añadir producto</button>
                 </div>
                 <div class="table-responsive" id="tblPlanilla">
                     <table class="table">
