--- a/Ventas/OCClientes.html
+++ b/Ventas/OCClientes.html
@@ -117,20 +117,23 @@
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
                 <div>
-                    <h6>Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <h6 class="fw-semibold mb-2">Buscar:</h6>
+                    <div class="input-div search">
+                        <input type="search" id="input-search" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
                         </svg></div>
                 </div>
-                <div>
-                    <h6>Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input" type="date"></div>
+                <div> 
+                    <h6  class="fw-semibold mb-2">Fecha inicial:</h6>
+                    <div class="input-div">
+                        <input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
                 </div>
                 <div>
-                    <h6>Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input" type="date"></div>
+                    <h6 class="fw-semibold mb-2">Fecha final:</h6>
+                    <div class="input-div">
+                        <input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
                 </div>
             </div>
             <div class="tarjeta">
@@ -199,31 +202,31 @@
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4 id="tituloDetalle">Detalle de órden de compra</h4>
-                    <div class="corner-group"><button class="btn" id="btnCancelarOC" type="button">Cancelar</button><button class="btn btn-primary" id="btnGuardarOC" type="button">Guardar</button><button class="btn b" id="btnEditarOC" type="button">Editar</button></div>
+                    <div class="corner-group"><button class="btn fw-bold" id="btnCancelarOC" type="button">Cancelar</button><button class="btn btn-primary fw-bold" id="btnGuardarOC" type="button">Guardar</button><button class="btn b fw-bold" id="btnEditarOC" type="button">Editar</button></div>
                 </div>
                 <div class="info-row">
                     <div class="info-detail max-height">
-                        <h6>Contacto cliente:</h6>
+                        <h6 class="fw-semibold">Contacto cliente:</h6>
                         <p id="info-contacto">Paragraph</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Cotización FIG:</h6><a id="info-cot" href="#">COT..</a>
+                        <h6 class="fw-semibold">Cotización FIG:</h6><a id="info-cot" href="#">COT..</a>
                     </div>
                     <div class="info-detail max-height">
-                        <h6>Lugar de entrega:</h6>
+                        <h6 class="fw-semibold">Lugar de entrega:</h6>
                         <p id="info-lugar-entrega">Nombre de dirección: Dirección de entrega de los productos</p>
                     </div>
                 </div>
                 <div class="info-row">
                     <div class="info-detail">
-                        <h6>Fecha de pedido:</h6>
+                        <h6 class="fw-semibold">Fecha de pedido:</h6>
                         <p id="info-fecha">12/08/2024 12:10:00</p>
                     </div>
                     <div class="info-detail">
-                        <h6>OC de cliente PDF:</h6><a id="info-oc" href="#">Link?..</a>
+                        <h6 class="fw-semibold">OC de cliente PDF:</h6><a id="info-oc" href="#">Link?..</a>
                     </div>
                     <div class="info-detail max-width">
-                        <h6>Progreso:</h6>
+                        <h6 class="fw-semibold">Progreso:</h6>
                         <div class="progress" id="info-progreso">
                             <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                         </div>
@@ -231,7 +234,7 @@
                 </div>
                 <div class="info-even-row">
                     <div>
-                        <h5 id="subtitle-productos">Productos:&nbsp;<span id="countProductos">n</span></h5>
+                        <h5 id="subtitle-productos" class="mb-3 fw-bold">Productos:&nbsp;<span id="countProductos">n</span></h5>
                         <div class="table-responsive" id="tblProductos">
                             <table class="table">
                                 <thead>
@@ -261,16 +264,16 @@
                             </table>
                         </div>
                     </div>
-                    <div class="flex-column">
-                        <h5>Detalle de productos</h5>
+                    <div class="flex-column d-flex gap-3">
+                        <h5 class="fw-bold">Detalle de productos</h5>
                         <div class="info-detail">
-                            <h6>OC proveedor</h6><a id="detalle-oc" href="#">OC..</a>
+                            <h6 class="fw-semibold">OC proveedor</h6><a id="detalle-oc" href="#">OC..</a>
                         </div>
                         <div class="info-detail">
-                            <h6>Posición actual:</h6>
+                            <h6 class="fw-semibold">Posición actual:</h6>
                             <p id="detalle-posicion">Almacén de acopio SMP</p>
                         </div>
-                        <h6>Abonos:&nbsp;<span id="countAbonos">n</span></h6>
+                        <h6 class="fw-semibold">Abonos:&nbsp;<span id="countAbonos">n</span></h6>
                         <div class="table-responsive" id="tblAbonos">
                             <table class="table">
                                 <thead>
