--- a/Compras/ConPlanilla.html
+++ b/Compras/ConPlanilla.html
@@ -113,7 +113,7 @@
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Compras: Req con planilla</h3>
-            <div class="corner-group"><a class="btn fw-semibold" role="button" id="btnDevolver">Devolver con observaciones</a><a class="btn btn-primary fw-semibold " role="button" id="btnEnviar">Enviar ofertas listas</a></div>
+            <div class="corner-group"><a class="btn fw-bold " role="button" id="btnDevolver">Devolver con observaciones</a><a class="btn btn-primary fw-bold " role="button" id="btnEnviar">Enviar ofertas listas</a></div>
         </div>
         <div id="content" class="content-column">
             <div class=" flex  gap-4">
@@ -125,7 +125,7 @@
                     <div class="d-flex gap-2 flex-column">
                         <h4 class="">Info R2024-871</h4>
                         <div class="info-detail ">
-                            <h6>Progreso:</h6>
+                            <h6 class="fw-semibold">Progreso:</h6>
                             <div class="progress" id="barProgreso">
                                 <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                             </div>
@@ -133,21 +133,21 @@
                     </div>
                     <div class="d-flex gap-2 flex-column" >
                         <div class="info-detail">
-                            <h6>Nombre:</h6>
+                            <h6 class="fw-semibold">Nombre:</h6>
                             <p id="infoNombre">Bolsas para Herramientas</p>
                         </div>
                         <div class="info-detail">
-                            <h6>Cliente:</h6>
+                            <h6 class="fw-semibold">Cliente:</h6>
                             <p id="infoCliente">Ferreyros S.A.</p>
                         </div>
                     </div>
                     <div class="d-flex gap-2 flex-column">
                         <div class="info-detail">
-                            <h6>Prioridad:</h6>
+                            <h6 class="fw-semibold">Prioridad:</h6>
                             <p id="infoPrioridad">Baja</p>
                         </div>
                         <div class="info-detail">
-                            <h6>Fecha de registro:</h6>
+                            <h6 class="fw-semibold">Fecha de registro:</h6>
                             <p id="infoFecha">24/7/2024</p>
                         </div>
                     </div>
@@ -420,27 +420,28 @@
                         </table>
                     </div>
                 </div>
-                <div class="info-row">
+                <div class="d-flex justify-content-between my-2">
                     <div class="info-detail">
-                        <h6>ID:</h6>
+                        <h6 class="fw-semibold">ID:</h6>
                         <p id="ofertaID">id</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Fecha de registro:</h6>
+                        <h6 class="fw-semibold">Fecha de registro:</h6>
                         <p id="ofertaFechaRegistro">12/08/2024 12:10:00</p>
                     </div>
                     <div class="info-detail">
-                        <h6>Moneda:</h6><select id="ofertaMoneda" class="form-control-sm">
+                        <h6 class="fw-semibold">Moneda:</h6><select id="ofertaMoneda" class="form-control-sm">
                             <option value="Nuevo sol">Nuevo sol</option>
                             <option value="Dólares">Dólares</option>
                         </select>
                     </div>
                     <div class="info-detail">
-                        <h6>Oferta PDF</h6><input type="file" id="ofertaPDF" class="form-control">
+                    <h6 class="fw-semibold">Oferta PDF</h6>
+                     <div><input type="file" id="ofertaPDF" class="form-control"></div>
                     </div>
                 </div>
                 <div class="info-detail">
-                    <h6 class="fw-bold">Planilla:</h6>
+                    <h6 class="fw-bold ">Planilla:</h6>
                     <div class="corner-group"><button class="btn fw-semibold" id="btnCargaMasiva" type="button">Carga masiva</button><button class="btn fw-semibold" id="btnNuevoProducto" type="button">Añadir producto</button></div>
                 </div>
                 <div class="table-responsive" id="tblProductosEnOferta">
