--- a/Inicio.html
+++ b/Inicio.html
@@ -119,7 +119,7 @@
             <h3 id="page-title">Hola [Nombre de usuario]</h3>
         </div>
         <div id="content" class="content-column">
-            <div class="btn-group" role="group"><button class="btn" id="btnMVV" type="button" data-bs-target="#toast-1" data-bs-toggle="toast">Misión, visión y valores</button><button class="btn" id="btnFlujo" type="button">Plantilla de flujo</button></div>
+            <div class="btn-group" role="group"><button class="btn fw-bold" id="btnMVV" type="button" data-bs-target="#toast-1" data-bs-toggle="toast">Misión, visión y valores</button><button class="btn fw-bold" id="btnFlujo" type="button">Plantilla de flujo</button></div>
             <div id="divMVV" class="tarjeta">
                 <div class="info-even-row">
                     <div class="content-column">
@@ -156,24 +156,26 @@
             </div>
             <div class="tarjeta row-direction">
                 <div>
-                    <h6>Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <h6 class="fw-semibold mb-2">Buscar:</h6>
+                    <div class="input-div search">
+                        <input type="search" id="input-search" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
                         </svg></div>
                 </div>
                 <div>
-                    <h6>Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input" type="date"></div>
+                    <h6 class="fw-semibold mb-2" >Fecha inicial:</h6>
+                    <div class="input-div">
+                        <input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
                 </div>
                 <div>
-                    <h6>Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input" type="date"></div>
+                    <h6 class="fw-semibold mb-2" >Fecha final:</h6>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
                 </div>
             </div>
-            <div class="info-even-row todo">
-                <div class="tarjeta">
+            <div class="info-even-row todo row">
+                <div class="col-6 p-4 rounded-4 bg-white">
                     <h5 class="text-center">Por hacer:&nbsp;<span id="countPorHacer">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblPorHacer">
@@ -200,7 +202,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="tarjeta">
+                <div class="col-6 p-4 rounded-4 bg-white">
                     <h5 class="text-center">En progreso:&nbsp;<span id="countEnProgreso">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblProgreso">
@@ -227,7 +229,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="tarjeta">
+                <div class="col-6 p-4 rounded-4 bg-white">
                     <h5 class="text-center">Completo:&nbsp;<span id="countCompleto">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblCompleto">
@@ -254,7 +256,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="tarjeta">
+                <div class="col-6 p-4 rounded-4 bg-white">
                     <h5 class="text-center">Congelado:&nbsp;<span id="countCongelado">n</span></h5>
                     <div class="table-responsive">
                         <table class="table" id="tblCongelado">
