--- a/Administracion/Conciliacion.html
+++ b/Administracion/Conciliacion.html
@@ -112,33 +112,34 @@
     </div>
     <div id="page-wraper">
         <div id="top-menu" class="buttons">
-            <h3 id="page-title">Administración: Documentos</h3><a class="btn" role="button" href="https://api-seguridad.sunat.gob.pe/v1/clientessol/4f3b88b3-d9d6-402a-b85d-6a0bc857746a/oauth2/loginMenuSol" target="_blank">SUNAT</a>
+            <h3 id="page-title">Administración: Documentos</h3><a class="btn fw-bold" role="button" href="https://api-seguridad.sunat.gob.pe/v1/clientessol/4f3b88b3-d9d6-402a-b85d-6a0bc857746a/oauth2/loginMenuSol" target="_blank">SUNAT</a>
         </div>
         <div id="content" class="content-column">
             <div class="tarjeta row-direction">
                 <div>
-                    <h6>Buscar:</h6>
-                    <div class="input-div search"><input type="search" id="input-search" class="search-input" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
+                    <h6 class="fw-bold mb-2">Buscar:</h6>
+                    <div class="input-div search">
+                        <input type="search" id="input-search" class="search-input form-control-sm" autocomplete="on" placeholder="Introduce palabras clave separadas por ;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-search">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
                             <path d="M21 21l-6 -6"></path>
                         </svg></div>
                 </div>
                 <div>
-                    <h6>Fecha inicial:</h6>
-                    <div class="input-div"><input id="input-fecha1" class="date-input" type="date"></div>
+                    <h6 class="fw-bold mb-2">Fecha inicial:</h6>
+                    <div class="input-div"><input id="input-fecha1" class="date-input form-control-sm" type="date"></div>
                 </div>
                 <div>
-                    <h6>Fecha final:</h6>
-                    <div class="input-div"><input id="input-fecha2" class="date-input" type="date"></div>
+                    <h6 class="fw-bold mb-2">Fecha final:</h6>
+                    <div class="input-div"><input id="input-fecha2" class="date-input form-control-sm" type="date"></div>
                 </div>
             </div>
             <div class="info-even-row">
                 <div class="tarjeta">
                     <div class="card-title-group">
-                        <h4>Registro de bancos</h4><button class="btn b" id="btnImportar" type="button">Importar reporte</button>
+                        <h4>Registro de bancos</h4><button class="btn b fw-bold" id="btnImportar" type="button">Importar reporte</button>
                     </div>
-                    <h5>Interbank:&nbsp;<span id="countInterbank">n</span></h5>
+                    <h5 class="fw-semibold">Interbank:&nbsp;<span id="countInterbank">n</span></h5>
                     <div class="table-responsive" id="tblIntertabk">
                         <table class="table">
                             <thead>
@@ -159,7 +160,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <h5>BCP:&nbsp;<span id="countBCP">n</span></h5>
+                    <h5 class="fw-semibold my-2">BCP:&nbsp;<span id="countBCP">n</span></h5>
                     <div class="table-responsive" id="tblBCP">
                         <table class="table">
                             <thead>
@@ -219,13 +220,13 @@
                             </svg>
                             <p class="p2">Todo está al día!</p>
                         </div>
-                        <div class="card-body card-value">
-                            <div class="info-detail">
-                                <h6>Banco:</h6>
+                        <div class=" gap-2  d-flex justify-content-between flex-column " >
+                            <div class="info-detail  ">
+                                <h6 class="fw-semibold">Banco:</h6>
                                 <p id="registroBanco">interbank</p>
                             </div>
                             <div class="info-detail">
-                                <h6>ID:</h6>
+                                <h6 class="fw-semibold">ID:</h6>
                                 <p id="registroID">n</p>
                             </div>
                         </div>
@@ -251,7 +252,7 @@
                             </div>
                             <div class="card-body card-value">
                                 <div class="info-detail">
-                                    <h6>ID:</h6>
+                                    <h6 class="fw-semibold">ID:</h6>
                                     <p id="movimientoID">n</p>
                                 </div>
                             </div>
